--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- header section start -->
     <header>
         <section class="container header-container">
             <div class="hono-logo">
                 <a href="#"><img src="./images/logo/logo_black.png" alt="HONO-LOGO"></a>
             </div>
+
+            <!-- navigation menu start -->
             <nav class="main-menu">
                 <ul>
                     <li><a href="#">HOME <i class="ri-arrow-down-s-line"></i></a>
@@ -23,7 +26,9 @@
                             <li><a href="#">Home 4</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">SHOP <i class="ri-arrow-down-s-line"></i></a></li>
+                    <li><a href="#">SHOP <i class="ri-arrow-down-s-line"></i></a>
+                        <!-- mega-menu will be added -->
+                    </li>
                     <li><a href="#">BLOG <i class="ri-arrow-down-s-line"></i></a>
                         <ul class="sub-menu">
                             <li><a href="#">Blog Grid Sidebar left</a></li>
@@ -46,6 +51,8 @@
                     <li><a href="#">CONTACT US</a></li>
                 </ul>
             </nav>
+            <!-- navigation menu end -->
+
             <div class="active-links">
                 <ul>
                     <li><a href="#"><i class="ri-heart-line"></i><span>3</span></a></li>
@@ -56,8 +63,10 @@
             </div>
         </section>
     </header>
-
+    <!-- header section end -->
+    
     <main>
+        <!-- hero section start -->
         <section class="hero-section">
             <div class="hero-slider">
                 <div class="content">
@@ -68,7 +77,7 @@
                 </div>
             </div>
         </section>
+        <!-- hero section end -->
     </main>
 </body>
 </html>
-<!-- naimeislam2004 -->
