--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
     <!-- header section end -->
     
     <main>
+
         <!-- hero section start -->
         <section class="hero-section">
             <div class="hero-slider">
-                <div class="content">
+                <div class="hero-content">
                     <p>New Collection</p>
                     <h2>Best of NeoCon</h2>
                     <h2>Gold Award</h2>
@@ -78,6 +79,54 @@
             </div>
         </section>
         <!-- hero section end -->
+
+        <!-- services section start -->
+        <section class="services-section">
+            <div class="container">
+                <div class="services-row">
+                    
+                    <div class="services-box">
+                        <div class="services-image">
+                            <img src="./images/icons/service-promo-1.png" alt="Promo-1">
+                        </div>
+                        <div class="services-content">
+                            <h2>FREE SHIPPING</h2>
+                            <p>Get 10% cash back, free shipping, free returns, and more at 1000+ top retailers!</p>
+                        </div>
+                    </div>
+                    <div class="services-box">
+                        <div class="services-image">
+                            <img src="./images/icons/service-promo-2.png" alt="Promo-1">
+                        </div>
+                        <div class="services-content">
+                            <h2>30 DAYS MONEY BACK</h2>
+                            <p>100% satisfaction guaranteed, or get your money back within 30 days!</p>
+                        </div>
+                    </div>
+                    <div class="services-box">
+                        <div class="services-image">
+                            <img src="./images/icons/service-promo-3.png" alt="Promo-1">
+                        </div>
+                        <div class="services-content">
+                            <h2>SAFE PAYMENT</h2>
+                            <p>Pay with the world’s most popular and secure payment methods.</p>
+                        </div>
+                    </div>
+                    <div class="services-box">
+                        <div class="services-image">
+                            <img src="./images/icons/service-promo-4.png" alt="Promo-1">
+                        </div>
+                        <div class="services-content">
+                            <h2>LOYALTY CUSTOMER</h2>
+                            <p>Card for the other 30% of their purchases at a rate of 1% cash back.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- services section end -->
+
     </main>
 </body>
 </html>
