product section complete

--- a/index.html
+++ b/index.html
@@ -181,6 +181,317 @@
         </section>
         <!-- banner section end -->
 
+        <!-- product section start -->
+        <section class="product-section">
+            <div class="container">
+                <div class="product-header">
+                    <h2>THE NEW ARRIVALS</h2>
+                    <p>Preorder now to receive exclusive deals & gifts</p>
+                </div>
+
+                <div class="product-box-wrapper">
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-1.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-2.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">ALIQUAM LOBORTIS</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span>$75.00 - $85.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-3.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-4.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">CONDIMENTUM POSUERE</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span><del>$89.00</del> - $80.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-5.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-6.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">CRAS NEQUE METUS</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span><del>$70.00</del> - $60.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-7.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-8.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">DONEC EU LIBERO AC</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span>$74</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-1.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-2.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">ALIQUAM LOBORTIS</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span>$75.00 - $85.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-3.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-4.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">CONDIMENTUM POSUERE</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span><del>$89.00</del> - $80.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-5.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-6.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">CRAS NEQUE METUS</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span><del>$70.00</del> - $60.00</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-s-box">
+                        <div class="product-img-box">
+                            <div class="sale-text">
+                                <span>sale</span>
+                            </div>
+                            <img class="product-img-1" src="./images/product-default/home-1/default-7.jpg" alt="Product-Default-1">
+                            <img class="product-img-2" src="./images/product-default/home-1/default-8.jpg" alt="Product-Default-2">
+                            <div class="product-layer">
+                                <div class="product-span">
+                                    <span>ADD TO CART</span>
+                                </div>
+                                <div class="product-icon">
+                                    <i class="ri-search-line"></i>
+                                    <i class="ri-heart-line"></i>
+                                    <i class="ri-shuffle-line"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product-content">
+                            <h3><a href="#">DONEC EU LIBERO AC</a></h3>
+                            <div class="content-align">
+                                <div class="content-align-left">
+                                    <ul class="prodcut-review">
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                        <li><i class="ri-star-fill"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="content-align-right">
+                                    <span>$74</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- product section start -->
     </main>
 </body>
 </html>
