banner section two complete

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="banner-box-1-item-layer">
                                 <h2>Mini rechargeable Table Lamp - E216</h2>
                                 <h4>WE DESIGN YOUR HOME</h4>
-                                <a href="#">DISCOVER NOW <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="dis-btn">DISCOVER NOW <i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
@@ -491,7 +491,25 @@
 
             </div>
         </section>
-        <!-- product section start -->
+        <!-- product section end -->
+
+        <!-- banner two section start -->
+        <section class="banner-section-two">
+            <div class="container">
+                <div class="banner-two-box">
+                    <div class="banner-two-img">
+                        <img src="./images/bannar/banner-style-3-img-1.jpg" alt="banner-style-3-img-1">
+                    </div>
+                    <div class="layer">
+                        <h2>Modern Furniture Basic Collection</h2>
+                        <p>WE DESIGN YOUR HOME MORE BEAUTIFUL</p>
+                        <a href="#" class="dis-btn">DISCOVER NOW <i class="ri-arrow-right-line"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- banner two section start -->
+        
     </main>
 </body>
 </html>
