--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 </div>
             </div>
         </section>
-        <!-- banner two section start -->
+        <!-- banner two section end -->
         
     </main>
 </body>
