--- a/index.html
+++ b/index.html
@@ -509,6 +509,71 @@
             </div>
         </section>
         <!-- banner two section end -->
+
+        <!-- banner three section start -->
+        <section class="banner-section-three">
+            <div class="banner-section-three-wrapper">
+
+                <div class="banner-3-box">
+                    <div class="banner-3-img">
+                        <img src="./images/bannar/banner-style-4-img-1.jpg" alt="banner-style-4-img-1">
+                        <div class="banner-3-layer">
+                            <div class="banner-3-content">
+                                <h2>BAR STOOL</h2>
+                                <p>20 product</p>
+                            </div>
+                            <div class="banner-3-icon">
+                                <i class="ri-arrow-right-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-3-box">
+                    <div class="banner-3-img">
+                        <img src="./images/bannar/banner-style-4-img-2.jpg" alt="banner-style-4-img-1">
+                        <div class="banner-3-layer">
+                            <div class="banner-3-content">
+                                <h2>BAR STOOL</h2>
+                                <p>20 product</p>
+                            </div>
+                            <div class="banner-3-icon">
+                                <i class="ri-arrow-right-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-3-box">
+                    <div class="banner-3-img">
+                        <img src="./images/bannar/banner-style-4-img-3.jpg" alt="banner-style-4-img-1">
+                        <div class="banner-3-layer">
+                            <div class="banner-3-content">
+                                <h2>BAR STOOL</h2>
+                                <p>20 product</p>
+                            </div>
+                            <div class="banner-3-icon">
+                                <i class="ri-arrow-right-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-3-box">
+                    <div class="banner-3-img">
+                        <img src="./images/bannar/banner-style-4-img-4.jpg" alt="banner-style-4-img-1">
+                        <div class="banner-3-layer">
+                            <div class="banner-3-content">
+                                <h2>BAR STOOL</h2>
+                                <p>20 product</p>
+                            </div>
+                            <div class="banner-3-icon">
+                                <i class="ri-arrow-right-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- banner three section end -->
         
     </main>
 </body>
