complete by sujon bhai

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <div class="banner-box-1-item-layer">
                                 <h2>Mini rechargeable Table Lamp - E216</h2>
                                 <h4>WE DESIGN YOUR HOME</h4>
-                                <a href="#" class="dis-btn">DISCOVER NOW <i class="ri-arrow-right-line"></i></a>
+                                <a href="#" class="dis-btn"">DISCOVER NOW <i class="ri-arrow-right-line"></i></a>
                             </div>
                         </div>
                     </div>
